--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,7 +52,7 @@ header nav a {
 	border-radius: 12px;
 	transition: background-color 0.25s;
 }
-header nav a:hover {
+header .menu__desktop nav a:hover {
 	background-color: #784f12;
 	color: #FFF;
 	box-shadow: 1px 2px 2px 2px #000;
@@ -77,6 +77,53 @@ header nav .left {
 	cursor: pointer;
 }
 
+div.menu__mobile {
+	display: none;
+	position: relative;
+}
+
+.menu__mobile > nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.menu__mobile__button {
+	background: none;
+	max-width: 48px;
+	max-height: 48px;
+	border: none;
+}
+.menu__mobile__button svg {
+	width: 100%;
+	height: 100%;
+}
+
+.menu__mobile__list {
+	z-index: 2;
+	position: absolute;
+	opacity: 0;
+	left: 0;
+	top: 100px;
+	height: 0;
+	right: 0;
+	transition: all 0.8s ease-in-out;
+}
+.menu__mobile__list.hovered{
+	z-index: 2;
+	height: 100px;
+	opacity: 1;
+	background: #fff;
+}
+
+.menu__mobile__list ul {
+	z-index: 3;
+	padding: 1rem 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	gap: 10px;
+}
 
 
 main .hero {
@@ -162,6 +209,32 @@ section#description {
 
 
 @media screen and (max-width: 580px) {
+
+	header .menu__mobile nav ul {
+		display: flex;
+		flex-direction: column;
+		align-items: stretch;
+	}
+	header .menu__mobile nav a {
+		color: #784f12;
+		font-weight: 600;
+		font-size: 14px;
+		letter-spacing: 2px;
+		padding: 0.4 0.8rem;
+		transition: background-color 0.25s;
+	}
+	header .menu__mobile nav a:hover {
+		background-color: #784f12;
+		color: #FFF;
+	}
+
+	nav.menu__desktop {
+		display: none;
+	}
+
+	div.menu__mobile {
+		display: block;
+	}
 
 	main .hero {
 		flex-direction: column;
