--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,7 +43,7 @@ header nav {
 	background: transparent;
 }
 
-header nav a {
+header .menu__desktop nav a {
 	color: #784f12;
 	font-weight: 600;
 	font-size: 14px;
@@ -101,6 +101,7 @@ div.menu__mobile {
 
 .menu__mobile__list {
 	z-index: 2;
+	background: #fff;
 	position: absolute;
 	opacity: 0;
 	left: 0;
@@ -109,20 +110,17 @@ div.menu__mobile {
 	right: 0;
 	transition: all 0.8s ease-in-out;
 }
-.menu__mobile__list.hovered{
+.menu__mobile__list.active{
 	z-index: 2;
-	height: 100px;
+	height: 140px;
 	opacity: 1;
-	background: #fff;
 }
 
 .menu__mobile__list ul {
 	z-index: 3;
-	padding: 1rem 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	gap: 10px;
 }
 
 
@@ -212,15 +210,23 @@ section#description {
 
 	header .menu__mobile nav ul {
 		display: flex;
+		height: 100%;
 		flex-direction: column;
 		align-items: stretch;
 	}
+	header .menu__mobile nav ul li {
+		flex: 1;
+	}
 	header .menu__mobile nav a {
+		display: flex;
+		align-items: center;
+		height: 100%;
+		padding: 1rem 0.8rem;
 		color: #784f12;
 		font-weight: 600;
 		font-size: 14px;
 		letter-spacing: 2px;
-		padding: 0.4 0.8rem;
+		vertical-align: 1;
 		transition: background-color 0.25s;
 	}
 	header .menu__mobile nav a:hover {
