--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,19 +41,19 @@ header nav {
 	background: transparent;
 }
 
-header .menu__desktop nav a {
+header .menu__desktop a {
 	color: #784f12;
 	font-weight: 600;
 	font-size: 14px;
 	letter-spacing: 2px;
 	padding: 0.8rem;
 	border-radius: 12px;
-	transition: background-color 0.25s;
+	transition: background-color 0.25s ease-out;
 }
-header .menu__desktop nav a:hover {
+header .menu__desktop a:hover {
 	background-color: #784f12;
 	color: #FFF;
-	box-shadow: 1px 2px 2px 2px #000;
+	box-shadow: 0px 6px 9px 0px #000;
 }
 
 header nav .left {
@@ -109,7 +109,7 @@ div.menu__mobile {
 	transform: translateY(80px);
 	height: 0;
 	right: 0;
-	transition: all 0.8s ease-in-out;
+	transition: all 0.5s ease-in-out;
 	overflow: hidden;
 }
 .menu__mobile__list.active{
