--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,7 @@ header nav {
 }
 
 header .menu__desktop a {
-	color: #784f12;
+	color: #946e35;
 	font-weight: 600;
 	font-size: 14px;
 	letter-spacing: 2px;
@@ -51,7 +51,7 @@ header .menu__desktop a {
 	transition: background-color 0.25s ease-out;
 }
 header .menu__desktop a:hover {
-	background-color: #784f12;
+	background-color: #946e35;
 	color: #FFF;
 	box-shadow: 0px 6px 9px 0px #000;
 }
@@ -153,7 +153,7 @@ main .hero .photo::before {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	border: solid 6px #784f12;
+	border: solid 6px #946e35;
 	border-radius: 10px;
 }
 
@@ -182,17 +182,18 @@ main .hero .presentation p {
 }
 
 section#description {
-	background-color: #784f12;
+	background-color: #946e35;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 0 4%;
+	padding: 0 6%;
+	padding-bottom: 10rem;
 }
 #description h1 {
 	margin-top: 6rem;
-	font-size: 4.8rem;
+	font-size: 3.2rem;
 	font-weight: 500;
-	max-width: 520px;
+	max-width: 560px;
 	color: #FFFFFF;
 	text-align: center;
 	font-family: "Crimson Pro", serif;
@@ -204,12 +205,13 @@ section#description {
 	font-family: "Crimson Pro", serif;
 	font-weight: 300;
 	font-size: 2.2rem;
+	line-height: 1.4;
 	color: #FFFFFF;
 	margin-bottom: 1rem;
-	text-align: justify;
+	text-align: left;
 }
 #description p:nth-of-type(3) {
-	margin-bottom: 6rem;
+
 }
 
 
@@ -224,6 +226,13 @@ section#description {
 
 	header.pageHeader.scrolled {
 		background-color: #FFF;
+		/*
+		background: rgba( 255, 255, 255, 0.3 );
+		box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+		backdrop-filter: blur( 6.5px );
+		-webkit-backdrop-filter: blur( 6.5px );
+		border-radius: 10px;
+		*/
 	}
 
 
@@ -242,7 +251,7 @@ section#description {
 		align-items: center;
 		height: 100%;
 		padding: 1rem 0.8rem;
-		color: #784f12;
+		color: #946e35;
 		font-weight: 600;
 		font-size: 14px;
 		letter-spacing: 2px;
@@ -250,7 +259,7 @@ section#description {
 		transition: background-color 0.25s;
 	}
 	header .menu__mobile nav a:hover {
-		background-color: #784f12;
+		background-color: #946e35;
 		color: #FFF;
 	}
 
@@ -270,24 +279,27 @@ section#description {
 	main .hero {
 		margin-top: 8rem;
 		padding: 0 4%;
+		padding-left: 15%;
 		margin-bottom: 4rem;
 	}
 
 	main .hero .photo {
-		height: auto;
+		height: 550px;
 		width: auto;
 		min-width: 240px;
 	}
 
+	main .hero .photo img {
+		border-radius: 0;
+	}
+
 	main .hero .photo::before {
 		content: '';
-		bottom: 0px;
-		right: 0px;
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		border: solid 6px #784f12;
-		border-radius: 10px;
+		width: 0;
+		height: 0;
+		background-color: transparent;
+		border: none;
+		display: none;
 	}
 
 }
