--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,9 +176,10 @@ main .hero .presentation {
 }
 main .hero .presentation h2, main .hero .presentation p {
 	color: #784f12;
+	font-family: "Crimson Pro", serif;
 }
 main .hero .presentation h2 {
-	font-size: 48px;
+	font-size: 64px;
 }
 main .hero .presentation p {
 	margin-top: 1rem;
@@ -223,9 +224,9 @@ section#description {
 
 section.services {
 	display: flex; 
-	padding: 4rem 8rem;
-	gap: 2rem;
-	justify-content: space-between;
+	padding: 4rem 10%;
+	gap: 1rem;
+	justify-content: space-around;
 }
 
 .services .service__card {
@@ -269,10 +270,10 @@ section.services {
 footer {
 	width: 100%;
 	background-color: #382f23;
-	display: flex;
 }
-footer > div {
-	min-height: 400px;
+footer .footer__top {
+	display: flex;
+	min-height: 300px;
 }
 
 footer .logo__container {
@@ -312,6 +313,14 @@ footer .details ul li p a {
 	text-decoration: underline 1px;
 	text-underline-offset: 5px;
 	font-size: 20px;
+}
+
+footer .copyright {
+	font-size: 16px;
+	text-align: center;
+	padding-bottom: 1rem;
+	color: white;
+	font-family: "Crimson Pro", serif;
 }
 
 @media screen and (max-width: 580px) {
@@ -411,8 +420,20 @@ footer .details ul li p a {
 	}
 
 
-	footer {
+	footer .footer__top {
+		min-height: 0;
 		flex-direction: column;
+		justify-content: space-around;
+		padding: 4rem 0;
+	}
+
+	footer .details {
+		padding: 0;
+		flex: 1;
+	}
+
+	footer .logo__container {
+		flex: 1;
 	}
 
 }
