--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,24 +30,23 @@ body::before {
 }
 
 body > header {
-	padding: 1rem 0;
+	padding: 2%;
 }
 
 header nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0.4rem 4rem;
+	padding: 0.4rem 2vw;
 	background: transparent;
 }
 
 header .menu__desktop a {
 	color: #946e35;
 	font-weight: 600;
-	font-size: 14px;
-	letter-spacing: 2px;
-	padding: 0.8rem;
-	border-radius: 12px;
+	font-size: 1vw;
+	letter-spacing: 0.2rem;
+	padding: clamp(1vw, 1vw, 1rem);
 	transition: background-color 0.25s ease-out;
 }
 header .menu__desktop a:hover {
@@ -58,15 +57,15 @@ header .menu__desktop a:hover {
 
 header nav .left {
 	display: flex;
-	gap: 2rem;
+	gap: 2vw;
 }
 
 .logo {
-	height: 80px;
-	width: 80px;
+	height: 18vh;
+	width: 18vw;
 	background-image: url("../img/logo.png");
 	background-repeat: no-repeat;
-	background-position: contain;
+	background-position: center;
 	background-size: contain;
 	transition: filter 1s;
 }
@@ -132,25 +131,25 @@ div.menu__mobile {
 
 
 main .hero {
-	margin-top: 8rem;
+	margin-top: 10vh;
 	padding: 0 4%;
 	display: flex;
 	justify-content: center;
-	gap: 4rem;
-	margin-bottom: 4rem;
+	gap: 6vw;
+	margin-bottom: 10vh;
 }
 
 main .hero .photo {
-	height: 530px;
-	width: 430px;
+	height: 75vh;
+	width: 25vw;
 	position: relative;
 }
 
 main .hero .photo::before {
 	z-index: 1;
 	content: '';
-	bottom: -20px;
-	right: -20px;
+	bottom: -8%;
+	right: -8%;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -166,7 +165,7 @@ main .hero .photo img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	box-shadow: 10px 10px 1px 1px rgba(255, 255, 255, 0.6);
+	box-shadow: 1vw 1vw 1px 1px rgba(255, 255, 255, 0.6);
 }
 
 main .hero .presentation {
@@ -179,11 +178,11 @@ main .hero .presentation h2, main .hero .presentation p {
 	font-family: "Crimson Pro", serif;
 }
 main .hero .presentation h2 {
-	font-size: 64px;
+	font-size: 6vw;
 }
 main .hero .presentation p {
 	margin-top: 1rem;
-	font-size: 22px;
+	font-size: 2vw;
 	font-weight: 700;
 }
 
@@ -196,54 +195,72 @@ section#description {
 	padding-bottom: 10rem;
 }
 #description h1 {
-	margin-top: 6rem;
-	font-size: 3.2rem;
+	margin-top: 12vh;
+	font-size: 4vw;
 	font-weight: 500;
-	max-width: 560px;
+	max-width: 60vw;
 	color: #FFFFFF;
 	text-align: center;
 	font-family: "Crimson Pro", serif;
-	margin-bottom: 4rem;
+	margin-bottom: 4vh;
 }
 
 #description p {
-	max-width: 600px;
+	max-width: 60vw;
 	font-family: "Crimson Pro", serif;
 	font-weight: 300;
-	font-size: 2.2rem;
+	font-size: 2vw;
 	line-height: 1.4;
 	color: #FFFFFF;
-	margin-bottom: 1rem;
+	margin-bottom: 4vh;
 	text-align: left;
 }
 #description p:nth-of-type(3) {
-
+	margin-bottom: 12vh;
 }
+
+
+
+#carouselExampleIndicators .carousel-control-prev .carousel-control-prev-icon, 
+#carouselExampleIndicators .carousel-control-next .carousel-control-next-icon{
+	width: 3vw;
+	height: 3vw;
+}
+
+#carouselExampleIndicators .carousel-indicators {
+	margin-bottom: 1vh;
+}
+#carouselExampleIndicators .carousel-indicators > button {
+	width: 3vw;
+	height: 1vh;
+	margin-left: 0.5vw;
+	margin-right: 0.5vw;
+}
+
+
 
 
 
 section.services {
 	display: flex; 
-	padding: 4rem 10%;
-	gap: 1rem;
+	padding: 12vh 10%;
 	justify-content: space-around;
 }
 
 .services .service__card {
 	display: flex;
 	flex-direction: column;
-	padding-top: 1rem;
-	padding-bottom: 2rem;
-	max-width: 300px;
+	padding-top: 3vh;
+	padding-bottom: 3vh;
+	max-width: 20vw;
 	background: rgba( 255, 255, 255, 0.3 );
 	box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
 	backdrop-filter: blur( 6.5px );
 	-webkit-backdrop-filter: blur( 6.5px );
-	border-radius: 10px;
 }
 
 .service__card .card__name {
-	min-height: 70px;
+	min-height: 10vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -251,19 +268,24 @@ section.services {
 }
 .card__name .card__name__name {
 	margin-top: 1rem;
-	font-size: 20px;
+	font-size: 1.8vw;
+}
+
+#services .service__card svg {
+	max-width: 2vw;
+	max-height: 6vh;
 }
 
 .service__card .card__description {
-	padding: 0 2rem;
-	font-size: 16px;
+	padding: 0 1.8vw;
+	font-size: 1.2vw;
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: 2vw;
 }
 .service__card .card__description p {
 	line-height: 1;
-	letter-spacing: 2px;
+	letter-spacing: 0.2vw;
 }
 
 
@@ -273,7 +295,7 @@ footer {
 }
 footer .footer__top {
 	display: flex;
-	min-height: 300px;
+	min-height: 40vh;
 }
 
 footer .logo__container {
@@ -285,8 +307,8 @@ footer .logo__container {
 }
 
 footer .logo__container .logo {
-	width: 150px;
-	height: 150px;
+	width: 24vw;
+	height: 24vh;
 }
 
 footer .details {
@@ -297,28 +319,28 @@ footer .details {
 footer .details ul {
 	display: flex;
 	flex-direction: column;
-	padding: 4rem;
-	gap: 2.5rem;
+	padding: 2vw;
+	gap: 1.5vw;
 }
 
 footer .details ul li p {
-	font-size: 22px;
-	letter-spacing: 2px;
+	font-size: 1.4vw;
+	letter-spacing: 0.2vw;
 	color: #aaa;
 	font-family: "Crimson Pro", serif;
 	font-weight: 100;
 }
 footer .details ul li p a {
 	color: #fff;
-	text-decoration: underline 1px;
-	text-underline-offset: 5px;
-	font-size: 20px;
+	text-decoration: underline 0.1vw;
+	text-underline-offset: 0.4vw;
+	font-size: 1.4vw;
 }
 
 footer .copyright {
-	font-size: 16px;
+	font-size: 1.4vw;
 	text-align: center;
-	padding-bottom: 1rem;
+	padding-bottom: 4vh;
 	color: white;
 	font-family: "Crimson Pro", serif;
 }
@@ -412,11 +434,13 @@ footer .copyright {
 
 
 	section.services {
-		display: flex; 
-		padding: 4rem 8rem;
-		gap: 2rem;
-		justify-content: space-between;
+		gap: 2vw;
+		justify-content: center;
 		flex-wrap: wrap;
+	}
+
+	section.services .service__card {
+		min-width: 60vw;
 	}
 
 
