--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,7 +165,7 @@ main .hero .photo img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	box-shadow: 1vw 1vw 1px 1px rgba(255, 255, 255, 0.6);
+	box-shadow: 1vw 3vh 1px 1px rgba(255, 255, 255, 0.6);
 }
 
 main .hero .presentation {
