--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,8 @@
 @import url('reset.css');
+@import url('header.css');
+@import url('hero.css');
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Noto+Serif+Oriya:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 html {
 	font-size: 62.5%;
@@ -10,17 +13,6 @@ body {
 	height: 100%;
 }
 
-body::before {
-	z-index: -1;
-	content: '';
-	position: fixed;
-	height: 100vh;
-	width: 100vw;
-	background-image: url("../img/plants.jpg");
-	opacity: 0.4;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
 .mask {
 	z-index: -1;
 	width: 100vw;
@@ -29,171 +21,10 @@ body::before {
 	position: absolute;
 }
 
-body > header {
-	padding: 2%;
-}
-
-header > nav {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0.4rem 2vw;
-	background: transparent;
-}
-
-header .menu__desktop a {
-	color: #946e35;
-	font-weight: 600;
-	font-size: 1vw;
-	letter-spacing: 0.2rem;
-	padding: clamp(1vw, 1vw, 1rem);
-	transition: background-color 0.25s ease-out;
-}
-header .menu__desktop a:hover {
-	background-color: #946e35;
-	color: #FFF;
-	box-shadow: 0px 6px 9px 0px #000;
-}
-
-header nav .left {
-	display: flex;
-	gap: 2vw;
-}
-
-.logo {
-	height: 18vh;
-	width: 18vw;
-	background-image: url("../img/logo.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: contain;
-	transition: filter 1s;
-}
-.logo:hover {
-	filter: drop-shadow(2px 2px 14px #FFF);
-	cursor: pointer;
-}
-
-div.menu__mobile {
-	display: none;
-	position: relative;
-}
-
-.menu__mobile > nav {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.menu__mobile__button {
-	background: none;
-	max-width: 48px;
-	max-height: 48px;
-	border: none;
-}
-.menu__mobile__button svg {
-	width: 100%;
-	height: 100%;
-	pointer-events: none;
-}
-
-.menu__mobile__list {
-	z-index: 2;
-	pointer-events: none;
-	background: #fff;
-	position: absolute;
-	opacity: 0;
-	left: 0;
-	top: 0;
-	transform: translateY(8.94vh);
-	height: 0;
-	right: 0;
-	transition: all 0.5s ease-in-out;
-	overflow: hidden;
-}
-.menu__mobile__list.active{
-	pointer-events: all;
-	z-index: 2;
-	height: 20vh;
-	opacity: 1;
-}
-
-.menu__mobile__list ul {
-	z-index: 3;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-}
-
-/*Attempt to fix the dropdown delay bug on mobile*/
-.menu__mobile__list ul li {
-	height: 0;
-	overflow: hidden;
-}
-.menu__mobile__list.active ul li {
-	height: auto;
-}
 
 
 
 
-
-main .hero {
-	margin-top: 10vh;
-	padding: 0 4%;
-	display: flex;
-	justify-content: center;
-	gap: 6vw;
-	margin-bottom: 10vh;
-}
-
-main .hero .photo {
-	height: 75vh;
-	width: 40vw;
-	max-width: 400px;
-	position: relative;
-}
-
-main .hero .photo::before {
-	z-index: 1;
-	content: '';
-	bottom: -8%;
-	right: -8%;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background: rgba( 255, 255, 255, 0.3 );
-	box-shadow: 0 8px 62px 0 rgba( 31, 38, 135, 0.37 );
-	backdrop-filter: blur( 6.5px );
-	-webkit-backdrop-filter: blur( 6.5px );
-}
-
-main .hero .photo img {
-	position: absolute;
-	z-index: 2;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	box-shadow: 1vw 3vh 1px 1px rgba(255, 255, 255, 0.6);
-}
-
-main .hero .presentation {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;	
-}
-main .hero .presentation h2, main .hero .presentation p {
-	color: #784f12;
-	font-family: "Crimson Pro", serif;
-}
-main .hero .presentation h2 {
-	font-size: 6vw;
-}
-main .hero .presentation p {
-	margin-top: 1rem;
-	font-size: 2vw;
-	font-weight: 700;
-}
 
 section#description {
 	background-color: #946e35;
