finished first version of hero text, contact button and quote

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,7 @@
 
 body > header {
 	z-index: 4;
-	padding: 2vh 3vw;
+	padding: 2vh 0;
 	background: linear-gradient(to bottom, #ECECEC 90%, #b8b8b800);
 	position: sticky;
 	top: 0;
